# mcp-bear

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_bear/: __init__.py  __main__.py  cli.py  server.py
tests/: test_server.py
