[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mcp-bear"
version = "0.1.0"
description = "A MCP server for interacting with Bear note-taking software."
readme = "README.md"
authors = [
  { name = "Junpei Kawamoto", email = "kawamoto.junpei@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1.8",
  "fastapi>=0.115.8",
  "mcp>=1.3",
  "pydantic>=2.10.6",
  "uvicorn>=0.34",
]

scripts.mcp-bear = "mcp_bear:main"

[dependency-groups]
dev = [
  "pre-commit>=4.1",
  "pre-commit-uv>=4.1.4",
  "pytest>=8.3.4",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
