[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mcp-bear"
version = "0.1.4"
description = "A MCP server for interacting with Bear note-taking software."
readme = "README.md"
authors = [
    { name = "Junpei Kawamoto", email = "kawamoto.junpei@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115",
    "mcp>=1.5",
    "pydantic>=2.10.6",
    "rich-click>=1.8.6",
    "uvicorn>=0.34",
]

scripts.mcp-bear = "mcp_bear.cli:main"

[dependency-groups]
dev = [
    "bump-my-version>=1",
    "pre-commit>=4",
    "pre-commit-uv>=4",
    "pytest>=8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pyproject-fmt]
indent = 4

[tool.bumpversion]
current_version = "0.1.4"
commit = true
pre_commit_hooks = [
    "uv sync",
    "git add uv.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
